# homelab-as-production-iac

./: .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ansible.cfg  pyproject.toml  requirements.txt
.codex/commands/: finalize.md  git-cleanup.md  review-pr.md  review-updates.md  start-task.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/commands/: gemini-review.toml
.github/workflows/: ci-testing.yml  claude-code-review.yml  claude.yml  maintenance-checks.yml  mirror-to-gitlab.yml  release-gitops-update.yml  sync-docs-to-wikijs.yml
ansible/: README.md  requirements.yml
ansible/.ssh/: k3s-cluster.pub
ansible/inventory/: dbs.yml  inventory.yml  k3s.yml
ansible/playbooks/: gitlab-runner-shell.yml  k3s-agents.yml  k3s-cluster.yml  k3s-registry-mirrors.yml  k3s-servers.yml  k3s-upgrade.yml  nexus-apt-mirror.yml  pg-backup.yml  pg-create-db.yml  pve.yml
ansible/templates/: backup-pg-dbs.sh.j2  k3s-agent-config.yaml.j2  k3s-registries.yaml.j2  k3s-server-config.yaml.j2
ci/allowlists/: helm-wildcard-versions.txt  image-tag-latest.txt  kube-insecure-skip-tls-verify.txt  kubeconfig-mode-0644.txt  ssh-strict-hostkeychecking-no.txt  terraform-insecure-true.txt
docs/: CHANGELOG.md  CICD-PLAN.md  PROJECT-PLAN.md  README.md
infrastructure/: .terraform.lock.hcl  NOTES.md  README.md  backend.tf  main.tf  output.tf  variables.tf  vm-template.tf
kubernetes/: README.md
scripts/: README.md  ansible-completions.sh  config-mcps.sh  env-load.sh  env-save.sh
(+382 files in other folders)
