[project]
name = "homelab-iac"
version = "0.1.0"
description = "Homelab Infrastructure as Code Project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anisble>=0.1",
    "ansible-dev-tools>=25.10.0",
    "argcomplete>=3.6.3",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pywinrm>=0.5.0",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.4",
    "isort>=7.0.0",
]
